--- a/LayoutKit.Xamarin/LayoutKit.Xamarin.csproj
+++ b/LayoutKit.Xamarin/LayoutKit.Xamarin.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -39,12 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
-    <Folder Include="Internal\" />
-    <Folder Include="Layouts\" />
-    <Folder Include="Math\" />
-    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Internal\CGSize_Extensions.cs" />
     <Compile Include="Layout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Alignment.cs" />
